fixed side menu that was displaying incorrectly on smaller screens

--- a/dashboard.css
+++ b/dashboard.css
@@ -365,7 +365,9 @@ background-color: rgba(255, 138, 0, 1);
      }  
 }
 @media  screen and (max-width:681px) {
-  
+  .side{
+    display: none;
+  }
    
    .container{
     display:grid;
